--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "preview": "astro build && wrangler pages dev",
     "astro": "astro",
     "deploy": "astro build && wrangler pages deploy",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "drizzle:generate": "drizzle-kit generate",
+    "drizzle:migrate": "drizzle-kit migrate",
+    "drizzle:dev": "drizzle-kit studio"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.1",
-    "astro": "^5.2.5"
+    "astro": "^5.2.5",
+    "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
