--- a/package.json
+++ b/package.json
@@ -15,9 +15,21 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.1",
+    "@astrojs/react": "^4.2.0",
+    "@fontsource-variable/quicksand": "^5.1.1",
+    "@fontsource/twinkle-star": "^5.1.1",
+    "@nanostores/react": "^0.8.4",
+    "@tailwindcss/vite": "^4.0.6",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.2.5",
     "drizzle-kit": "^0.30.4",
-    "drizzle-orm": "^0.39.2"
+    "drizzle-orm": "^0.39.2",
+    "lucia": "^3.2.2",
+    "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
