--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
     "@astrojs/react": "^4.2.0",
     "@fontsource-variable/quicksand": "^5.1.1",
     "@fontsource/twinkle-star": "^5.1.1",
+    "@iconify-json/mdi": "^1.2.3",
     "@nanostores/react": "^0.8.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@tailwindcss/vite": "^4.0.6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.5",
-    "drizzle-kit": "^0.30.4",
-    "drizzle-orm": "^0.39.2",
+    "astro-icon": "^1.1.5",
+    "better-auth": "^1.1.17",
+    "drizzle-orm": "^0.39.3",
+    "kysely": "^0.27.5",
+    "kysely-d1": "^0.3.0",
     "lucia": "^3.2.2",
+    "nanoid": "^5.0.9",
     "nanostores": "^0.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -33,6 +39,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
+    "drizzle-kit": "^0.30.4",
+    "micromatch": "^4.0.8",
     "wrangler": "^3.107.3"
   }
 }
