--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/quicksand": "^5.1.1",
     "@fontsource/twinkle-star": "^5.1.1",
     "@iconify-json/mdi": "^1.2.3",
+    "@libsql/kysely-libsql": "^0.4.1",
     "@nanostores/react": "^0.8.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@tailwindcss/vite": "^4.0.6",
@@ -26,7 +27,7 @@
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.5",
     "astro-icon": "^1.1.5",
-    "better-auth": "^1.1.17",
+    "better-auth": "^1.1.19",
     "drizzle-orm": "^0.39.3",
     "kysely": "^0.27.5",
     "kysely-d1": "^0.3.0",
@@ -35,6 +36,7 @@
     "nanostores": "^0.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
