--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.1",
+    "@astrojs/markdoc": "^0.13.3",
     "@astrojs/react": "^4.2.0",
     "@fontsource-variable/outfit": "^5.2.5",
     "@fontsource-variable/quicksand": "^5.1.1",
     "@fontsource/twinkle-star": "^5.2.5",
     "@iconify-json/mdi": "^1.2.3",
+    "@keystatic/astro": "^5.0.6",
+    "@keystatic/core": "^0.5.46",
     "@libsql/kysely-libsql": "^0.4.1",
     "@marsidev/react-turnstile": "^1.1.0",
     "@nanostores/react": "^0.8.4",
@@ -34,18 +37,21 @@
     "drizzle-orm": "^0.39.3",
     "kysely": "^0.27.5",
     "kysely-d1": "^0.3.0",
+    "leaflet": "^1.9.4",
     "lucia": "^3.2.2",
     "nanoid": "^5.0.9",
     "nanostores": "^0.11.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "resend": "^4.1.2",
     "tailwindcss": "^4.0.6",
     "yet-another-react-lightbox": "^3.21.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
+    "@types/leaflet": "^1.9.17",
     "drizzle-kit": "^0.30.4",
     "micromatch": "^4.0.8",
     "wrangler": "^3.107.3"
