--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY }}
       TURSO_AUTH_TOKEN: ${{ secrets.TURSO_AUTH_TOKEN }}
       TURSO_DATABASE_URL: ${{ secrets.TURSO_DATABASE_URL }}
-      PUBLIC_KEYSTATIC_GITHUB_APP_SLUG: ${{ variables.PUBLIC_KEYSTATIC_GITHUB_APP_SLUG }}
-      PUBLIC_TURNSTILE_SITE_KEY: ${{ variables.PUBLIC_TURNSTILE_SITE_KEY }}
+      PUBLIC_KEYSTATIC_GITHUB_APP_SLUG: ${{ vars.PUBLIC_KEYSTATIC_GITHUB_APP_SLUG }}
+      PUBLIC_TURNSTILE_SITE_KEY: ${{ vars.PUBLIC_TURNSTILE_SITE_KEY }}
       
     
     steps:
