--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "astro-icon": "^1.1.5",
     "better-auth": "^1.1.19",
     "drizzle-orm": "^0.39.3",
+    "express": "^5.1.0",
     "kysely": "^0.27.5",
     "kysely-d1": "^0.3.0",
     "leaflet": "^1.9.4",
