--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@marsidev/react-turnstile": "^1.1.0",
     "@nanostores/react": "^0.8.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.0.6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
